# proyecto

./: README.md  pyproject.toml
data/: batch_validation.csv
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md
scripts/evaluation/: main.py
scripts/training/: main.py
strokeanalysis/database/: database.py
strokeanalysis/models/: models.py
strokeanalysis/preprocessing/: preprocessing.py
strokeanalysis/types/: data_fields.py  hparams.py  metrics.py  models.py
